--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     },
     "permissions": [
         "activeTab",
-        "https://q9.is/",
+        "https://askrobots.com/",
         "storage"
     ],
     "browser_action": {
@@ -23,5 +23,5 @@
             "scripts": ["background.js"],
             "persistent": false
     },
-    "content_security_policy": "script-src 'self'; object-src 'self'; connect-src https://q9.is;"
+    "content_security_policy": "script-src 'self'; object-src 'self'; connect-src https://askrobots.com;"
 }
